--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="o-section o-section--lg">
           <div class="o-layout">
             <div class="o-layout__item u-1-of-2-bp3">
-              <h1>
+              <h1 class="c-lead c-lead--xxl u-color-primary-base">
                 Cancer is smart. <br />
                 Together, we can <br />
                 be smarter.
@@ -77,7 +77,7 @@
             </div>
             <div class="o-layout__item u-1-of-2-bp3">
               <div class="u-max-width-sm">
-                <p>
+                <p class="c-lead--lg">
                   Accelerating the fight against cancer requires the entire industry to work together. Our products connect community oncologists, academics, hospitals, life science researchers and regulators on a shared technology platform. <br />
                   Together, we can learn from the experience of every patient.
                 </p>
@@ -101,16 +101,16 @@
             </figure>
             <div class="layout__item u-1-of-2-bp3">
               <header>
-                <h2>
+                <h2 class="c-lead c-lead--xxl">
                   For Community <br />
                   Oncology
                 </h2>
               </header>
-              <p>
+              <p class="c-lead c-lead--lg">
                 OncoCloud is the most comprehensive suite of software and services in community oncology. Using our technology, community clinics are providing better care for patients while remaining efficient, independent and financially
                 successful.
               </p>
-              <p>
+              <p class="c-link-cta">
                 <a href="#!">Learn more</a>
               </p>
             </div>
@@ -129,13 +129,15 @@
             </figure>
             <div class="o-layout__item u-1-of-2-bp3">
               <header>
-                <h2>
+                <h2 class="c-lead c-lead--xxl">
                   For Life <br />
                   Sciences
                 </h2>
               </header>
-              <p>With access to billions of data points on millions of cancer patients treated across our network, Flatiron is changing the way life science companies are using real-world data to accelerate research and generate evidence.</p>
-              <p>
+              <p class="c-lead c-lead--lg">
+                With access to billions of data points on millions of cancer patients treated across our network, Flatiron is changing the way life science companies are using real-world data to accelerate research and generate evidence.
+              </p>
+              <p class="c-link-cta">
                 <a href="#!">Learn more</a>
               </p>
             </div>
@@ -154,16 +156,16 @@
             </figure>
             <div class="o-layout__item u-1-of-2-bp3">
               <header>
-                <h2>
+                <h2 class="c-lead c-lead--xxl">
                   For Academics <br />
                   &amp; Hospitals
                 </h2>
               </header>
-              <p>
+              <p class="c-lead c-lead--lg">
                 Flatiron’s enriched data infrastructure helps hospitals and academic centers unlock the promise of their EHR data. Researchers and clinicians now have access to research-grade insights from within and beyond the walls of their
                 institution.
               </p>
-              <p>
+              <p class="c-link-cta">
                 <a href="#!">Learn more</a>
               </p>
             </div>
@@ -172,32 +174,47 @@
       </div>
     </section>
     <section class="o-row o-row--lg">
-      <div class="o-container">
-        <header>
-          <h2>Do well by doing good. Join the leading tech company in the fight against cancer.</h2>
-        </header>
-        <p>
-          <a href="#!">Our story</a>
-        </p>
-        <p>
-          <a href="#!">Our values</a>
-        </p>
-        <p>
-          <a href="#!">Join our team</a>
-        </p>
+      <div class="o-section o-section--lg">
+        <div class="o-section o-section--lg">
+          <div class="o-container">
+            <div class="o-container u-max-width-sm">
+              <header>
+                <h2 class="u-color-primary-base c-lead c-lead--xxl">Do well by doing good. Join the leading tech company in the fight against cancer.</h2>
+              </header>
+              <div class="c-nav c-nav__list">
+                <p class="c-nav__link">
+                  <a href="#!">Our story</a>
+                </p>
+                <p class="c-nav__link">
+                  <a href="#!">Our values</a>
+                </p>
+                <p class="c-nav__link">
+                  <a href="#!">Join our team</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="o-section">
+          <div class="o-container">
+            <figure>
+              <img src="img/jpg/img-4.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up" />
+            </figure>
+          </div>
+        </div>
       </div>
-      <div class="o-container">
-        <figure>
-          <img src="img/jpg/img-4.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up" />
-        </figure>
-      </div>
-      <div class="o-container">
-        <h3>Life at Flatiron</h3>
-
-        <p>The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.</p>
-        <p>
-          <a href="#!">Open positions</a>
-        </p>
+      <div class="o-section">
+        <div class="o-container">
+          <div class="o-layout">
+            <h3 class="o-layout__item u-1-of-2-bp1">Life at Flatiron</h3>
+            <div class="o-layout__item u-1-of-2-bp1">
+              <p>The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.</p>
+              <p>
+                <a href="#!">Open positions</a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="o-row o-row--lg">
