added new row modifier & cta-link modifier

--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
                 <h2 class="u-color-primary-base c-lead c-lead--xxl">Do well by doing good. Join the leading tech company in the fight against cancer.</h2>
               </header>
               <div class="c-nav c-nav__list">
-                <p class="c-nav__link">
+                <p class="c-nav__link c-link-cta">
                   <a href="#!">Our story</a>
                 </p>
-                <p class="c-nav__link">
+                <p class="c-nav__link c-link-cta">
                   <a href="#!">Our values</a>
                 </p>
-                <p class="c-nav__link">
+                <p class="c-nav__link c-link-cta">
                   <a href="#!">Join our team</a>
                 </p>
               </div>
@@ -209,7 +209,7 @@
             <h3 class="o-layout__item u-1-of-2-bp1">Life at Flatiron</h3>
             <div class="o-layout__item u-1-of-2-bp1">
               <p>The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.</p>
-              <p>
+              <p class="c-link-cta">
                 <a href="#!">Open positions</a>
               </p>
             </div>
@@ -217,12 +217,12 @@
         </div>
       </div>
     </section>
-    <section class="o-row o-row--lg">
+    <section class="o-row o-row--lg o-row—gradient">
       <div class="o-container">
         <div class="u-max-width-xs">
           <h2>Let us tell you more.</h2>
           <p>We will email you to start the conversation. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          <p>
+          <p class="c-link-cta c-link-cta--inverse">
             <a href="#!">Sign me up</a>
           </p>
         </div>
